// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.properties with Latin-1 encoding 1`] = `
"import { plural, number, select } from '@messageformat/runtime';
import { fi } from '@messageformat/runtime/lib/plurals';

var messages = {
  simple: () => \\"Yksinkertainen viesti.\\",
  \\"var\\": (d) => \\"Viesti jossa \\" + d.X + \\".\\",
  plural: (d) => \\"Sinulla \\" + plural(d.N, 0, fi, { \\"0\\": \\"ei ole viestejä\\", one: \\"on 1 viesti\\", other: \\"on \\" + number(\\"fi\\", d.N, 0) + \\" viestiä\\" }) + \\".\\",
  select: (d) => select(d.GENDER, { other: \\"Hän\\" }) + \\" lähetti sinulle viestin.\\",
  ordinal: (d) => plural(d.N, 0, fi, { other: number(\\"fi\\", d.N, 0) + \\".\\" }, 1) + \\" viesti.\\"
};

console.log(messages);
"
`;

exports[`README sample 1`] = `
"import { plural, number } from '@messageformat/runtime';
import { fr as fr$1 } from '@messageformat/runtime/lib/cardinals';

var fr = {
  message_intro: (d) => plural(d.count, 0, fr$1, { one: \\"Votre message se trouve ici.\\", other: \\"Vos \\" + number(\\"fr\\", d.count, 0) + \\" messages se trouvent ici.\\" }) + \\"\\\\n\\"
};

fr.message_intro({ count: 3 });
"
`;

exports[`YAML with default import 1`] = `
"import { plural, number, select } from '@messageformat/runtime';
import { en, fi } from '@messageformat/runtime/lib/plurals';

var messages = {
  en: {
    simple: () => \\"A simple message.\\",
    \\"var\\": (d) => \\"Message with \\" + d.X + \\".\\",
    plural: (d) => \\"You have \\" + plural(d.N, 0, en, { \\"0\\": \\"no messages\\", one: \\"1 message\\", other: number(\\"en\\", d.N, 0) + \\" messages\\" }) + \\".\\",
    select: (d) => select(d.GENDER, { male: \\"He has\\", female: \\"She has\\", other: \\"They have\\" }) + \\" sent you a message.\\",
    ordinal: (d) => \\"The \\" + plural(d.N, 0, en, { one: \\"1st\\", two: \\"2nd\\", few: \\"3rd\\", other: number(\\"en\\", d.N, 0) + \\"th\\" }, 1) + \\" message.\\"
  },
  fi: {
    simple: () => \\"Yksinkertainen viesti.\\",
    \\"var\\": (d) => \\"Viesti jossa \\" + d.X + \\".\\",
    plural: (d) => \\"Sinulla \\" + plural(d.N, 0, fi, { \\"0\\": \\"ei ole viestejä\\", one: \\"on 1 viesti\\", other: \\"on \\" + number(\\"fi\\", d.N, 0) + \\" viestiä\\" }) + \\".\\",
    select: (d) => select(d.GENDER, { other: \\"Hän\\" }) + \\" lähetti sinulle viestin.\\",
    ordinal: (d) => plural(d.N, 0, fi, { other: number(\\"fi\\", d.N, 0) + \\".\\" }, 1) + \\" viesti.\\"
  }
};

console.log(messages);
"
`;

exports[`YAML with named import 1`] = `
"import { plural, number, select } from '@messageformat/runtime';
import { en, fi } from '@messageformat/runtime/lib/plurals';

var messages = {
  en: {
    simple: () => \\"A simple message.\\",
    \\"var\\": (d) => \\"Message with \\" + d.X + \\".\\",
    plural: (d) => \\"You have \\" + plural(d.N, 0, en, { \\"0\\": \\"no messages\\", one: \\"1 message\\", other: number(\\"en\\", d.N, 0) + \\" messages\\" }) + \\".\\",
    select: (d) => select(d.GENDER, { male: \\"He has\\", female: \\"She has\\", other: \\"They have\\" }) + \\" sent you a message.\\",
    ordinal: (d) => \\"The \\" + plural(d.N, 0, en, { one: \\"1st\\", two: \\"2nd\\", few: \\"3rd\\", other: number(\\"en\\", d.N, 0) + \\"th\\" }, 1) + \\" message.\\"
  },
  fi: {
    simple: () => \\"Yksinkertainen viesti.\\",
    \\"var\\": (d) => \\"Viesti jossa \\" + d.X + \\".\\",
    plural: (d) => \\"Sinulla \\" + plural(d.N, 0, fi, { \\"0\\": \\"ei ole viestejä\\", one: \\"on 1 viesti\\", other: \\"on \\" + number(\\"fi\\", d.N, 0) + \\" viestiä\\" }) + \\".\\",
    select: (d) => select(d.GENDER, { other: \\"Hän\\" }) + \\" lähetti sinulle viestin.\\",
    ordinal: (d) => plural(d.N, 0, fi, { other: number(\\"fi\\", d.N, 0) + \\".\\" }, 1) + \\" viesti.\\"
  }
};

console.log(messages.fi);
"
`;
